--- a/plotter/convert_pictures/main.html
+++ b/plotter/convert_pictures/main.html
@@ -6,7 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <style>
         body{
-            font-size: 5px;
+            font-size: 17px;
+            line-height: 6px;
             font-family: 'VT323', monospace;
         }
     </style>
